feat: add backend security, squad services, and mobile UI components with local Maven environment setup